[tool.poetry]
name = "web-scrapper"
version = "0.1.0"
description = ""
authors = ["thony <thony.pythony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
